# csci-366-spring2021

./: .gitignore  README.md
battlebit/: README.md
battlebit/googletest/: CMakeLists.txt
battlebit/src/: char_buff.c  repl.c
grading/scripts/: autograde.rb  students.csv
homework_2/: CMakeLists.txt
homework_3/: demo.asm  homework_3.mips
samples/: bit_manipulation.c  functions.c  intro.c  pointers.c  sockets.c  stack_and_heap.c  strings_structs.c
